# eda-nijin

./: README.md  Untitled.ipynb  pyproject.toml
notebook/: Untitled.ipynb  built-in-function.ipynb  chart.ipynb  first.ipynb  president.ipynb  second 0123.ipynb
src/eda_nijin/: cli.py
tests/: test_search_speech.py
