[project]
name = "eda-nijin"
version = "0.3.0"
description = "Default template for PDM package"
authors = [
    {name = "heejin131", email = "journeyjean131@gmail.com"},
]
dependencies = ["pandas>=2.2.3"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
